Fix: Hide unnecessary scrollbar
This is a problem that seems to happen only when an external mouse is attached. Not everybody on the team uses an external mouse, so we're having a challenge staying on top of these (ugly) unnecessary scrollbars...

--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -126,6 +126,7 @@ a.feedback:hover {
 
 .prompt-chat-container .ant-pro-chat-chat-list-container{
   height: 742px !important;
+  overflow: auto; /* To avoid premature scrollbars in some setups, like when mouse is plugged in apparently... */
 }
 
 .ant-pro-chat {
